--- a/_includes/cat-nav.html
+++ b/_includes/cat-nav.html
@@ -8,7 +8,11 @@
 <ul>
 {% for node in site.pages %}
   {% if page.categories != null and page.categories == node.categories %}
-  <li><a href="{{ node.url }}">{{ node.title }}</a></li>
+    {% if page.url == node.url %}
+      <li class="active"><a href="{{ node.url }}">{{ node.title }}</a></li>
+    {% else %}
+      <li><a href="{{ node.url }}">{{ node.title }}</a></li>
+    {% endif %}
   {% endif %}
 {% endfor %}
 </ul>
