--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
       <hr />
       <div class="row">
         <div class="large-6 columns">
-          <p>&copy; Copyright 2013 Nick Satterly. Available under the MIT License.</p>
+          <p>&copy; Copyright 2013 Nick Satterly. MIT License.</p>
         </div>
         <div class="large-6 columns">
           <ul class="inline-list right">
