--- a/_includes/top-nav.html
+++ b/_includes/top-nav.html
@@ -4,8 +4,8 @@
     <div class="large-12 columns">
       <div class="nav-bar right">
        <ul class="button-group">
-         <li><a href="{{ site.url }}/" class="button">Overview</a></li>
          <li><a href="{{ site.url }}/home/" class="button">Documentation</a></li>
+         <li><a href="{{ site.url }}/docs/download/" class="button">Download</a></li>
          <li><a href="http://try.alerta.io" class="button">Try It</a></li>
          <li><a href="{{ site.repository }}" class="button">View on Github</a></li>
         </ul>
