updated featured box

--- a/_includes/featured.html
+++ b/_includes/featured.html
@@ -1,5 +1,5 @@
       <div class="panel">
         <h5>Featured</h5>
-        <p>Pork smork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow.</p>
-        <a href="#">Read More &rarr;</a>
+        <p>There are integrations available for Nagios, Zabbix, Riemann and SolarWinds with others currently in development.</p>
+        <a href="/docs/integrations/">Read More &rarr;</a>
       </div>
