--- a/_includes/featured.html
+++ b/_includes/featured.html
@@ -1,5 +1,6 @@
       <div class="panel">
-        <h5>Featured</h5>
-        <p>There are integrations available for Nagios, Zabbix, Riemann and SolarWinds with others currently in development.</p>
+        <h5>Consolidated View</h5>
+        <p>There are integrations available for Nagios, Zabbix, Riemann and SolarWinds
+        	with others currently in development.</p>
         <a href="/docs/integrations/">Read More &rarr;</a>
       </div>
