--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,10 +17,10 @@
         </div>
         <div class="large-6 columns">
           <ul class="inline-list right">
-            <li><a href="#">Link 1</a></li>
-            <li><a href="#">Link 2</a></li>
-            <li><a href="#">Link 3</a></li>
-            <li><a href="#">Link 4</a></li>
+            <li><a href="/home/">Home</a></li>
+            <li><a href="/docs/home/">Docs</a></li>
+            <li><a href="/man/home/#">Man Pages</a></li>
+            <li><a href="/docs/support/">Support</a></li>
           </ul>
         </div>
       </div>
