--- a/_includes/top-nav.html
+++ b/_includes/top-nav.html
@@ -4,15 +4,16 @@
     <div class="large-12 columns">
       <div class="nav-bar right">
        <ul class="button-group">
-         <li><a href="{{ site.url }}/home/" class="button">Documentation</a></li>
+         <li><a href="{{ site.url }}/docs/home/" class="button">Documentation</a></li>
          <li><a href="{{ site.url }}/docs/download/" class="button">Download</a></li>
          <li><a href="http://try.alerta.io" class="button">Try It</a></li>
          <li><a href="{{ site.repository }}" class="button">View on Github</a></li>
         </ul>
       </div>
-      <h1>alerta <small>monitoring system</small></h1>
+      <h1><a class="home" href="/home/">alerta</a> <small>monitoring system</small></h1>
       <hr />
     </div>
   </div>
 
   <!-- End Nav -->
+  
