make feature block configurable

--- a/_includes/featured.html
+++ b/_includes/featured.html
@@ -1,6 +1,11 @@
+    
+{% if page.featured %}
+
       <div class="panel">
         <h5>Consolidated View</h5>
         <p>There are integrations available for Nagios, Zabbix, Riemann and SolarWinds
         	with others currently in development.</p>
         <a href="/docs/integrations/">Read More &rarr;</a>
       </div>
+      
+{% endif %}
