--- a/_layouts/manpage.html
+++ b/_layouts/manpage.html
@@ -23,7 +23,11 @@ layout: default
 
     <!-- End Main Content -->
 
+  {% include cat-nav.html %}
 
+  </div>
+
+  <!-- End Main Content and Sidebar -->
 
 
 
