refactor nav bars

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -11,7 +11,7 @@ layout: default
 
       <article>
 
-        <h3><a href="#">{{ page.title }}</a></h3>
+        <h1><a href="#">{{ page.title }}</a></h1>
 
         <div class="docs">
           {{ content }}
@@ -23,7 +23,7 @@ layout: default
 
     <!-- End Main Content -->
 
-  {% include cat-nav.html %}
+  {% include side_nav.html %}
 
   </div>
 
