fix title on mobile

--- a/_includes/top_nav.html
+++ b/_includes/top_nav.html
@@ -16,7 +16,12 @@
           <li><a href="{{ site.repository }}" class="button">Github</a></li>
         </ul>
       </div>
-      <h1><a class="home" href="/home/">alerta</a> <span class="hide-for-small"><small>monitoring system</small></span></h1>
+      <span class="hide-for-small">
+        <h1><a class="home" href="/home/">alerta</a> <small>monitoring system</small></h1>
+      </span>
+      <span class="show-for-small">
+        <h1><a class="home" href="/home/">alerta</a></h1>
+      </span>
       <hr />
     </div>
   </div>
