--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
   {{ content }}
 
   {% include tags.html %}
+  {% include disqus.html %}
   {% include footer.html %}
   {% include scripts.html %}
 
