add manpage css

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -10,9 +10,9 @@
   <link rel="stylesheet" href="{{ site.url }}/assets/css/normalize.css" />
   <link rel="stylesheet" href="{{ site.url }}/assets/css/foundation.css" />
 
-  <link rel="stylesheet" href="{{ site.url }}/css/syntax.css" />
+  <!-- link rel="stylesheet" href="{{ site.url }}/css/syntax.css" / -->
   <link rel="stylesheet" href="{{ site.url }}/css/app.css" />
-
+  <link rel="stylesheet" href="{{ site.url }}/css/manpage.css" />
   <script src="{{ site.url }}/assets/js/vendor/custom.modernizr.js"></script>
 
 </head>
