--- a/_layouts/manpage.html
+++ b/_layouts/manpage.html
@@ -11,9 +11,9 @@ layout: default
 
       <article>
 
-        <h1><a href="#">{{ page.title }}</a></h1>
+        <h1><a href="#">{{ page.title | upcase }}</a></h1>
 
-        <div class="docs">
+        <div id="manpage" class="mp">
           {{ content }}
         </div>
 
