--- a/css/app.css
+++ b/css/app.css
@@ -13,23 +13,13 @@
 }
 
 * {
-    font-family: 'Sintony' !important;
+    font-family: 'Sintony';
 }
 
 body {
     /* color: blue; */
     /* background: #fff url(/images/alerta.png) no-repeat bottom right; */
     /* background-color: red; */
-}
-
-code,
-kbd,
-pre,
-samp {
-    font-family: monospace, serif;
-    font-size: 0.9em;
-    font-weight: normal;
-    background: #F0F0F0;
 }
 
 .home {
