--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,46 +1,21 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+{% include top.html %}
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+<body>
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+  {% include top_nav.html %}
 
-    </head>
-    <body>
+   <div id="header-outer">
+   </div>
 
-        <div class="container">
-          <div class="site">
-            <div class="header">
-              <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-              <a class="extra" href="/">home</a>
-            </div>
+   <div id="content-outer">
+   <h1 id="title">{{ page.title }}</h1>
+     <div id="content-inner">
+       {{ content }}
+     </div>
+   </div>
 
-                {{ content }}
+   <div id="footer-outer">
+   </div>
 
-            <div class="footer">
-              <div class="contact">
-                <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
-                </p>
-              </div>
-              <div class="contact">
-                <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
-                </p>
-              </div>
-            </div>
-          </div>
-        </div> <!-- /container -->
-
-    </body>
+</body>
 </html>
