switch to foundation5

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,23 +1,5 @@
-  <script>
-  document.write('<script src=' +
-  ('__proto__' in {} ? '/assets/js/vendor/zepto' : '/assets/js/vendor/jquery') +
-  '.js><\/script>')
-  </script>
-  <script src="{{ site.url }}/assets/js/foundation/foundation.js"></script>
-  <script src="{{ site.url }}/assets/js/foundation/foundation.alerts.js"></script>
-  <script src="{{ site.url }}/assets/js/foundation/foundation.clearing.js"></script>
-  <script src="{{ site.url }}/assets/js/foundation/foundation.cookie.js"></script>
-  <script src="{{ site.url }}/assets/js/foundation/foundation.dropdown.js"></script>
-  <script src="{{ site.url }}/assets/js/foundation/foundation.forms.js"></script>
-  <script src="{{ site.url }}/assets/js/foundation/foundation.joyride.js"></script>
-  <script src="{{ site.url }}/assets/js/foundation/foundation.magellan.js"></script>
-  <script src="{{ site.url }}/assets/js/foundation/foundation.orbit.js"></script>
-  <script src="{{ site.url }}/assets/js/foundation/foundation.placeholder.js"></script>
-  <script src="{{ site.url }}/assets/js/foundation/foundation.reveal.js"></script>
-  <script src="{{ site.url }}/assets/js/foundation/foundation.section.js"></script>
-  <script src="{{ site.url }}/assets/js/foundation/foundation.tooltips.js"></script>
-  <script src="{{ site.url }}/assets/js/foundation/foundation.topbar.js"></script>
-  <script src="{{ site.url }}/assets/js/foundation/foundation.interchange.js"></script>
+  <script src="{{ site.url }}/assets/js/vendor/jquery.js"></script>
+  <script src="{{ site.url }}/assets/js/foundation.min.js"></script>
   <script>
     $(document).foundation();
   </script>
