--- a/_includes/top.html
+++ b/_includes/top.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
+<html class="no-js" lang="en" >
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title }}</title>
-  <meta name="viewport" content="width=device-width" />
 
   <link rel="stylesheet" href="{{ site.url }}/assets/css/normalize.css" />
   <link rel="stylesheet" href="{{ site.url }}/assets/css/foundation.css" />
 
-  <link rel="stylesheet" href="{{ site.url }}/css/syntax.css" />
   <link rel="stylesheet" href="{{ site.url }}/css/app.css" />
-  <link rel="stylesheet" href="{{ site.url }}/css/manpage.css" />
-  <script src="{{ site.url }}/assets/js/vendor/custom.modernizr.js"></script>
+  <link rel="stylesheet" href="{{ site.url }}/css/syntax.css" />
+  
+  <script src="{{ site.url }}/assets/js/vendor/modernizr.js"></script>
 
 </head>
