--- a/_layouts/foundation.html
+++ b/_layouts/foundation.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Foundation | Welcome</title>
-    <link rel="stylesheet" href="css/foundation.css" />
-    <script src="js/vendor/modernizr.js"></script>
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/foundation.css" />
+    <script src="{{ site.url }}/assets/js/vendor/modernizr.js"></script>
   </head>
   <body>
     
@@ -157,8 +157,8 @@
       </div>
     </div>
     
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/foundation.min.js"></script>
+    <script src="{{ site.url }}/assets/js/vendor/jquery.js"></script>
+    <script src="{{ site.url }}/assets/js/foundation.min.js"></script>
     <script>
       $(document).foundation();
     </script>
