--- a/_includes/top_nav.html
+++ b/_includes/top_nav.html
@@ -3,14 +3,14 @@
   <div class="row">
     <div class="large-12 columns">
       <div class="nav-bar right">
-        <ul class="">
-          <li><a href="{{ site.url }}/docs/home/" class="">Documentation</a></li>
-          <li><a href="{{ site.url }}/docs/download/" class="">Download</a></li>
-          <li><a href="http://try.alerta.io" class="">Try It</a></li>
-          <li><a href="{{ site.repository }}" class="">View on Github</a></li>
+        <ul class="button-group">
+          <li><a href="{{ site.url }}/docs/home/" class="button">Documentation</a></li>
+          <li><a href="{{ site.url }}/docs/download/" class="button">Download</a></li>
+          <li><a href="http://try.alerta.io" class="button">Try It</a></li>
+          <li><a href="{{ site.repository }}" class="button">View on Github</a></li>
         </ul>
       </div>
-        <h1><a class="home" href="/home/">alerta</a></h1>
+        <h1><a class="home" href="/home/">alerta</a> version 3</h1>
       <hr />
     </div>
   </div>
