--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   {% include top_nav.html %}
 
     <div class="row">
-      <div class="large-12 column">
+      <div class="large-12 columns">
         <h1 id="title">{{ page.title }}</h1>
       </div>
     </div>
