--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -1,4 +1,9 @@
+ <!-- Tags -->
 
+  <div class="row">
+    <div class="large-12 columns">
       {% for tag in page.tags %}
         <span class="radius secondary label">{{ tag }}</span>
       {% endfor %}
+    </div>
+  </div>
