--- a/_includes/top_nav.html
+++ b/_includes/top_nav.html
@@ -4,10 +4,10 @@
     <div class="large-12 columns">
       <div class="nav-bar right">
         <ul class="button-group">
-          <li><a href="{{ site.url }}/docs/home/" class="button">Documentation</a></li>
-          <li><a href="{{ site.url }}/docs/download/" class="button">Download</a></li>
-          <li><a href="http://try.alerta.io" class="button">Try It</a></li>
-          <li><a href="{{ site.repository }}" class="button">View on Github</a></li>
+          <li><a href="{{ site.url }}/docs/home/" class="button secondary">Documentation</a></li>
+          <li><a href="{{ site.url }}/docs/download/" class="button secondary">Download</a></li>
+          <li><a href="http://try.alerta.io" class="button secondary">Try It</a></li>
+          <li><a href="{{ site.repository }}" class="button secondary">View on Github</a></li>
         </ul>
       </div>
         <h1><a class="home" href="/home/">alerta</a> version 3</h1>
@@ -16,4 +16,3 @@
   </div>
 
   <!-- End Nav -->
-
