--- a/_includes/top.html
+++ b/_includes/top.html
@@ -7,12 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ page.title }}</title>
 
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700" />
   <link rel="stylesheet" href="{{ site.url }}/assets/css/normalize.css" />
   <link rel="stylesheet" href="{{ site.url }}/assets/css/foundation.css" />
 
   <link rel="stylesheet" href="{{ site.url }}/css/app.css" />
   <link rel="stylesheet" href="{{ site.url }}/css/syntax.css" />
-  
+
   <script src="{{ site.url }}/assets/js/vendor/modernizr.js"></script>
 
 </head>
