--- a/_includes/top_nav.html
+++ b/_includes/top_nav.html
@@ -2,16 +2,35 @@
 
   <div class="row">
     <div class="large-12 columns">
-      <div class="nav-bar right">
-        <ul class="button-group">
-          <li><a href="{{ site.url }}/docs/home/" class="button secondary">Documentation</a></li>
-          <li><a href="{{ site.url }}/docs/download/" class="button secondary">Download</a></li>
-          <li><a href="http://try.alerta.io" class="button secondary">Try It</a></li>
-          <li><a href="{{ site.repository }}" class="button secondary">View on Github</a></li>
+      <nav class="top-bar" data-topbar>
+        <ul class="title-area">
+          <li class="name">
+            <h1><a href="#">alerta</a></h1>
+          </li>
+          <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
         </ul>
-      </div>
-        <h1><a class="home" href="/home/">alerta</a> version 3</h1>
-      <hr />
+
+        <section class="top-bar-section">
+
+          <!-- Right Nav Section -->
+          <ul class="right">
+          <li><a href="{{ site.url }}/docs/home/" class="">Documentation</a></li>
+          <li><a href="{{ site.url }}/docs/download/" class="">Download</a></li>
+          <li class="has-dropdown">
+            <a href="#">More</a>
+            <ul class="dropdown">
+              <li><a href="http://try.alerta.io">Demo</a></li>
+              <li><a href="http://github.com/guardian/alerta">GitHub</a></li>
+            </ul>
+          </li>
+          </ul>
+
+          <!-- Left Nav Section -->
+          <ul class="left">
+            <li><a href="#">...</a></li>
+          </ul>
+        </section>
+      </nav>
     </div>
   </div>
 
