--- a/css/app.css
+++ b/css/app.css
@@ -12,13 +12,36 @@
     src: url('../assets/fonts/Sintony-Bold.ttf');
 }
 
-html {
-    font-size: 0.9rem;
+h1 {
+  font-weight: bold;
+  color: #fff;
+  font-size: 32px;
+}
 
+h2 {
+  font-weight: bold;
+  font-size: 24px;
+}
+
+h3 {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+h4 {
+  font-size: 14px;
 }
 
 body {
     font-family: 'Sintony';
+}
+
+p {
+    font-size: 0.9em;
+}
+
+ul.inline-list {
+    font-size: 0.9em;
 }
 
 .label {
