--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,8 @@
-{% include top.html %}
+{% include head.html %}
 
 <body>
 
-  {% include top_nav.html %}
+  {% include nav.html %}
 
   <!-- Main Page Content and Sidebar -->
 
