--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,7 @@
           <li class="has-dropdown">
             <a href="#">More</a>
             <ul class="dropdown">
-              <li><a href="http://try.alerta.io">Demo</a></li>
+              <li><a href="">Demo</a></li>
               <li><a href="http://github.com/guardian/alerta">GitHub</a></li>
             </ul>
           </li>
