update docs layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,11 @@
 
   <!-- Main Page Content and Sidebar -->
 
-  <div class="row">
+  <!-- div class="row">
     <div class="large-12 columns">
       <h2 id="title">{{ page.title }}</h4>
     </div>
-  </div>
+  </div -->
 
   <!-- Main Page Content -->
 
