--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,7 +14,10 @@
 
           <!-- Right Nav Section -->
           <ul class="right">
+          <li><a href="{{ site.url }}/home/" class="">Home</a></li>
+          <li><a href="{{ site.url }}/docs/gettingstarted/" class="">Getting Started</a></li>
           <li><a href="{{ site.url }}/docs/home/" class="">Documentation</a></li>
+          <li><a href="{{ site.url }}/docs/blog/" class="">Blog</a></li>
           <li><a href="{{ site.url }}/docs/download/" class="">Download</a></li>
           <li class="has-dropdown">
             <a href="#">More</a>
