--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
 
   <meta name="google-site-verification" content="TRtmR1cpyUulwkDMx2V-xW0H7LKO7LhWXHiScsNK5mQ" />
 
-  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700" />
+  <link href='http://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ site.url }}/assets/css/normalize.css" />
   <link rel="stylesheet" href="{{ site.url }}/assets/css/foundation.css" />
 
