--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,18 +14,19 @@
 
           <!-- Right Nav Section -->
           <ul class="right">
-          <li><a href="{{ site.url }}/home/" class="">Home</a></li>
+          <li><a href="{{ site.url }}/" class="">Home</a></li>
           <li><a href="{{ site.url }}/docs/gettingstarted/" class="">Getting Started</a></li>
           <li><a href="{{ site.url }}/docs/home/" class="">Documentation</a></li>
-          <li><a href="{{ site.url }}/docs/blog/" class="">Blog</a></li>
+          <li><a href="{{ site.url }}/blog/home/" class="">Blog</a></li>
           <li><a href="{{ site.url }}/docs/download/" class="">Download</a></li>
-          <li class="has-dropdown">
+          <li><a href="{{ site.url }}/docs/develop/" class="">Develop</a></li>
+          <!-- li class="has-dropdown">
             <a href="#">More</a>
             <ul class="dropdown">
               <li><a href="">Demo</a></li>
               <li><a href="http://github.com/guardian/alerta">GitHub</a></li>
             </ul>
-          </li>
+          </li -->
           </ul>
 
           <!-- Left Nav Section -->
