--- a/_layouts/jumbotron.html
+++ b/_layouts/jumbotron.html
@@ -65,7 +65,7 @@
         <div class="col-md-4">
           <h2>Why Alerta?</h2>
           <p>Scalable monitoring and alert visualisation. A minimal installation can be deployed quickly and easily extended as monitoring requirements and confidence grow. There are integrations available with Riemann, Nagios, Zabbix, Kibana and Sensu. Integrating bespoke systems is easy using the API or command-line tool.</p>
-          <p><a class="btn btn-default" href="#" role="button">Integrations &raquo;</a></p>
+          <p><a class="btn btn-default" href="http://try.alerta.io" role="button">Try it now &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Alert API</h2>
