--- a/_layouts/carousel.html
+++ b/_layouts/carousel.html
@@ -80,21 +80,21 @@
       <div class="row">
         <div class="col-lg-4">
           <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2>Why alerta?</h2>
+          <p>Scalable monitoring and alert visualisation. A minimal installation can be deployed quickly and easily extended as monitoring requirements and confidence grow. There are integrations available with Riemann, Nagios, Zabbix, Kibana, Sensu and InfluxDB. Integrating bespoke systems is easy using the API or command-line tool.</p>
+          <p><a class="btn btn-default" href="http://try.alerta.io" role="button">Try it now &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
-          <h2>Heading</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2>Alert API</h2>
+          <p>Alerts are submitted in JSON-format to an HTTP API. Alerts can be queried from the command-line or viewed in a slick web console optimized for desktop, tablet and mobile. Logins can be added using Google OAuth2 and programatic access using API keys.</p>
+          <p><a class="btn btn-default" href="http://explorer.alerta.io" role="button">API Explorer &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2>Deploy It!</h2>
+          <p>There are standard deployments to AWS EC2, RedHat OpenShift, Packer, Docker and Heroku available to get you going in minutes. Other more complex deployments make use of standard Python package install techniques.</p>
+          <p><a class="btn btn-default" href="http://docs.alerta.io" role="button">Learn more &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
@@ -105,8 +105,8 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">All the alerts. <span class="text-muted">Not just the easy ones.</span></h2>
+          <p class="lead">Alerta accepts alerts from the standard sources like Syslog, SNMP, Nagios, Zabbix and Sensu. Any monitoring tool that can trigger a URL request can be integrated easily. Anything that can be scripted can also send alerts using the command-line tool. There is already a Python SDK and Ruby and Scala SDKs are in the pipeline. Cool.</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive" src="http://placehold.it/500x500" alt="Generic placeholder image">
@@ -120,8 +120,8 @@
           <img class="featurette-image img-responsive" src="http://placehold.it/500x500" alt="Generic placeholder image">
         </div>
         <div class="col-md-7">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Flexible alert format. <span class="text-muted">Capture what's important to you.</span></h2>
+          <p class="lead">Most other monitoring tools enforce their view of the world on you. Not with Alerta. You are free to send any alert with any value. A signle alert could be associated with multiple services, have any number of 'tags' in any format, and any number of custom attributes are allowed. Nice.</p>
         </div>
       </div>
 
@@ -129,8 +129,8 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">De-duplication and simple correlation. <span class="text-muted">Out of the box.</span></h2>
+          <p class="lead">When receiving alerts from multiple sources you can quickly become overwhelmed. With Alerta any alert with the same environment and resource is considered a duplicate if it has the same severity. If it has a different severity it is correlated so that you only see the most recent one. Awesome.</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive" src="http://placehold.it/500x500" alt="Generic placeholder image">
@@ -145,7 +145,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2014 Nick Satterly &middot; <a href="http://ec.europa.eu/justice/data-protection/">Privacy</a> &middot; <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache License</a></p>
       </footer>
 
     </div><!-- /.container -->
