--- a/_layouts/carousel.html
+++ b/_layouts/carousel.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Carousel Template for Bootstrap</title>
+    <title>{{ page.title }}</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
@@ -38,25 +38,35 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Project name</a>
+              <a class="navbar-brand" href="#">alerta</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li class="active"><a href="http://alerta.io">Home</a></li>
+                <li><a href="http://docs.alerta.io">Documentation</a></li>
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Develop <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
+                    <li><a href="https://github.com/alerta/alerta-contrib">Plugins</a></li>
+                    <li><a href="https://github.com/alerta/python-alerta">CLI &amp; Python SDK</a></li>
+                    <li><a href="https://github.com/alerta/alerta-chrome-extension">Chrome Extension</a></li>
                     <li class="divider"></li>
-                    <li class="dropdown-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
+                    <li class="dropdown-header">Integrations</li>
+                    <li><a href="https://github.com/alerta/nagios3-alerta">Nagios</a></li>
+                    <li><a href="https://github.com/alerta/zabbix-alerta">Zabbix</a></li>
+                    <li><a href="https://github.com/alerta/riemann-alerta">Riemann</a></li>
+                    <li><a href="https://github.com/alerta/sensu-alerta">Sensu</a></li>
+                    <!-- li><a href="https://github.com/alerta/kibana-alerta">Kibana</a></li -->
+                    <li class="divider"></li>
+                    <li class="dropdown-header">Deploy</li>
+                    <li><a href="https://github.com/alerta/alerta-cfn">AWS Cloudformation</a></li>
+                    <li><a href="https://github.com/alerta/docker-alerta">Docker</a></li>
+                    <li><a href="https://github.com/alerta/packer-templates">Packer</a></li>
+                    <li><a href="https://github.com/alerta/openshift-try-alerta">RedHat OpenShift</a></li>
+                    <li><a href="https://github.com/alerta/vagrant-try-alerta">Vagrant</a></li>
                   </ul>
                 </li>
+                <li><a href="http://github.com/guardian/alerta">GitHub</a></li>
               </ul>
             </div>
           </div>
@@ -65,10 +75,7 @@
       </div>
     </div>
 
-
     {{ content }}
-
-
 
     <!-- Marketing messaging and featurettes
     ================================================== -->
