--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,6 +62,7 @@
                     <li><a href="https://github.com/alerta/alerta-cfn">AWS Cloudformation</a></li>
                     <li><a href="https://github.com/alerta/docker-alerta">Docker</a></li>
                     <li><a href="https://github.com/alerta/packer-templates">Packer</a></li>
+                    <li><a href="https://pypi.python.org/pypi/alerta-server">Python PyPI</a></li>
                     <li><a href="https://github.com/alerta/openshift-try-alerta">RedHat OpenShift</a></li>
                     <li><a href="https://github.com/alerta/vagrant-try-alerta">Vagrant</a></li>
                   </ul>
