--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -129,7 +129,7 @@
         </div>
         <div class="col-md-7">
           <h2 class="featurette-heading">Flexible alert format. <span class="text-muted">Capture what's important to you.</span></h2>
-          <p class="lead">Most other monitoring tools enforce their view of the world on you. Not with Alerta. You are free to send any alert with any value. A signle alert could be associated with multiple services, have any number of 'tags' in any format, and any number of custom attributes are allowed. Nice.</p>
+          <p class="lead">Most other monitoring tools enforce their view of the world on you. Not with Alerta. You are free to send any alert with any value. A single alert could be associated with multiple services, have any number of 'tags' in any format, and any number of custom attributes are allowed. Nice.</p>
         </div>
       </div>
 
