--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -6,7 +6,7 @@
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', '{{ site.tracking_id }}', 'alerta.io');
+    ga('create', '{{ site.tracking_id }}', 'auto');
     ga('send', 'pageview');
 
   </script>
