--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,8 @@
 
     <title>{{ page.title }}</title>
 
+    <meta name="google-site-verification" content="TRtmR1cpyUulwkDMx2V-xW0H7LKO7LhWXHiScsNK5mQ" />
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 
