--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,8 @@
 
     <title>{{ page.title }}</title>
 
-    <meta name="google-site-verification" content="TRtmR1cpyUulwkDMx2V-xW0H7LKO7LhWXHiScsNK5mQ" />
+    <meta name="google-site-verification" content="TRtmR1cpyUulwkDMx2V-xW0H7LKO7LhWXHiScsNK5mQ" /> <!-- alerta.io -->
+    <meta name="google-site-verification" content="TRtmR1cpyUulwkDMx2V-xW0H7LKO7LhWXHiScsNK5mQ" /> <!-- www.alerta.io -->
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
