add some images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -128,7 +128,7 @@
 
       <div class="row featurette">
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="http://placehold.it/500x500" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" src="/images/console-001.png" alt="Generic placeholder image">
         </div>
         <div class="col-md-7">
           <h2 class="featurette-heading">Flexible alert format. <span class="text-muted">Capture what's important to you.</span></h2>
@@ -144,7 +144,7 @@
           <p class="lead">When receiving alerts from multiple sources you can quickly become overwhelmed. With Alerta any alert with the same environment and resource is considered a duplicate if it has the same severity. If it has a different severity it is correlated so that you only see the most recent one. Awesome.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="http://placehold.it/500x500" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" src="/images/console-002.png" alt="Generic placeholder image">
         </div>
       </div>
 
