--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,8 +64,9 @@
                     <li class="divider"></li>
                     <li class="dropdown-header">Deploy</li>
                     <li><a href="https://github.com/alerta/alerta-cfn">AWS Cloudformation</a></li>
-                    <li><a href="https://github.com/alerta/docker-alerta">Docker</a></li>
+                    <li><a href="https://registry.hub.docker.com/u/alerta/alerta-web/">Docker</a></li>
                     <li><a href="https://github.com/alerta/packer-templates">Packer</a></li>
+                    <li><a href="https://github.com/guardian/alerta#deploy-to-the-cloud">Heroku</a></li>
                     <li><a href="https://pypi.python.org/pypi/alerta-server">Python PyPI</a></li>
                     <li><a href="https://github.com/alerta/openshift-try-alerta">RedHat OpenShift</a></li>
                     <li><a href="https://github.com/alerta/vagrant-try-alerta">Vagrant</a></li>
