--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,13 +101,13 @@
         <div class="col-lg-4">
           <i class="fa fa-wrench fa-5x"></i>
           <h2>Alert API</h2>
-          <p>Alerts are submitted in JSON-format to an HTTP API. Alerts can be queried from the command-line or viewed in a slick web console optimized for desktop, tablet and mobile. Logins can be added using Google OAuth2 and programatic access using API keys.</p>
+          <p>Alerts are submitted in JSON-format to an HTTP API. Alerts can be queried from the command-line or viewed in a slick web console optimized for desktop, tablet and mobile. User logins can be added using Google or GitHub OAuth2 and programatic access is managed using API keys.</p>
           <p><a class="btn btn-default" href="http://explorer.alerta.io" role="button">API Explorer &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <i class="fa fa-download fa-5x"></i>
           <h2>Deploy It!</h2>
-          <p>There are standard deployments to AWS EC2, RedHat OpenShift, Packer, Docker and Heroku available to get you going in minutes. Other more complex deployments make use of standard Python package install techniques.</p>
+          <p>There are standard deployments to AWS EC2, Vagrant, RedHat OpenShift, Packer, Docker and Heroku available to get you going in minutes. Other more complex deployments make use of standard Python package install techniques.</p>
           <p><a class="btn btn-default" href="http://docs.alerta.io" role="button">Learn more &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
