add twitter button back

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -155,9 +155,14 @@
 
       <!-- /END THE FEATURETTES -->
 
-
       <!-- FOOTER -->
       <footer>
+
+        <div style="text-align:center">
+          <a href="https://twitter.com/nicksatterly" class="twitter-follow-button" data-show-count="false">Follow @nicksatterly</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+        </div>
+
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>&copy; 2014 Nick Satterly &middot; <a href="http://ec.europa.eu/justice/data-protection/">Privacy</a> &middot; <a href="http://www.apache.org/licenses/LICENSE-2.0.html">License</a></p>
       </footer>
