--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -159,7 +159,7 @@
       <footer>
 
         <div style="text-align:center">
-          <a href="https://twitter.com/nicksatterly" class="twitter-follow-button" data-show-count="false">Follow @nicksatterly</a>
+          <a href="https://twitter.com/alertaio" class="twitter-follow-button" data-show-count="false">Follow @alertaio</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
         </div>
 
