--- a/_layouts/carousel.html
+++ b/_layouts/carousel.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -72,7 +73,6 @@
                   </ul>
                 </li>
                 <li><a href="http://github.com/guardian/alerta">GitHub</a></li>
-                <li><a href="/about.html">About</a></li>
               </ul>
             </div>
           </div>
@@ -88,6 +88,72 @@
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
     <div class="container marketing">
+
+      <!-- Three columns of text below the carousel -->
+      <div class="row">
+        <div class="col-lg-4">
+          <!-- img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;" -->
+          <i class="fa fa-dashboard fa-5x img-circle"></i>
+          <h2>Why alerta?</h2>
+          <p>Email was not designed to be used as an alert console. It is not a scalable solution when it comes to monitoring and alert visualisation. A minimal installation can be deployed quickly and easily extended as monitoring requirements and confidence grow. There are integrations available with Riemann, Nagios, Zabbix, Kibana, Sensu and InfluxDB. Integrating bespoke systems is easy using the API or command-line tool.</p>
+          <p><a class="btn btn-default" href="http://try.alerta.io" role="button">Try it now &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <i class="fa fa-wrench fa-5x"></i>
+          <h2>Alert API</h2>
+          <p>Alerts are submitted in JSON-format to an HTTP API. Alerts can be queried from the command-line or viewed in a slick web console optimized for desktop, tablet and mobile. User logins can be added using Google or GitHub OAuth2 and programatic access is managed using API keys.</p>
+          <p><a class="btn btn-default" href="http://explorer.alerta.io" role="button">API Explorer &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <i class="fa fa-download fa-5x"></i>
+          <h2>Deploy It!</h2>
+          <p>There are standard deployments to AWS EC2, Vagrant, RedHat OpenShift, Packer, Docker and Heroku available to get you going in minutes. Other more complex deployments make use of standard Python package install techniques.</p>
+          <p><a class="btn btn-default" href="http://docs.alerta.io" role="button">Learn more &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+
+
+      <!-- START THE FEATURETTES -->
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">All the alerts. <span class="text-muted">Not just the easy ones.</span></h2>
+          <p class="lead">Alerta accepts alerts from the standard sources like Syslog, SNMP, Nagios, Zabbix and Sensu. Any monitoring tool that can trigger a URL request can be integrated easily. Anything that can be scripted can also send alerts using the command-line tool. There is already a Python SDK and Ruby and Scala SDKs are in the pipeline. Cool.</p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive" src="/images/console-004.png" alt="Generic placeholder image">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive" src="/images/console-003.png" alt="Generic placeholder image">
+        </div>
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Flexible alert format. <span class="text-muted">Capture what's important to you.</span></h2>
+          <p class="lead">Most other monitoring tools enforce their view of the world on you. Not with Alerta. You are free to send any alert with any value. A single alert could be associated with multiple services, have any number of 'tags' in any format, and any number of custom attributes are allowed. Nice.</p>
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">De-duplication and simple correlation. <span class="text-muted">Out of the box.</span></h2>
+          <p class="lead">When receiving alerts from multiple sources you can quickly become overwhelmed. With Alerta any alert with the same environment and resource is considered a duplicate if it has the same severity. If it has a different severity it is correlated so that you only see the most recent one. Awesome.</p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive" src="/images/console-002.png" alt="Generic placeholder image">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <!-- /END THE FEATURETTES -->
 
       <!-- FOOTER -->
       <footer>
