add kibana to carousel menu

--- a/_layouts/carousel.html
+++ b/_layouts/carousel.html
@@ -60,7 +60,7 @@
                     <li><a href="https://github.com/alerta/zabbix-alerta">Zabbix</a></li>
                     <li><a href="https://github.com/alerta/riemann-alerta">Riemann</a></li>
                     <li><a href="https://github.com/alerta/sensu-alerta">Sensu</a></li>
-                    <!-- li><a href="https://github.com/alerta/kibana-alerta">Kibana</a></li -->
+                    <li><a href="https://github.com/alerta/kibana-alerta">Kibana</a></li>
                     <li class="divider"></li>
                     <li class="dropdown-header">Deploy</li>
                     <li><a href="https://github.com/alerta/alerta-cfn">AWS Cloudformation</a></li>
