--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,6 +93,7 @@
       <footer>
 
         <div style="text-align:center">
+          <iframe src="https://ghbtns.com/github-btn.html?user=guardian&repo=alerta&type=star&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
           <a href="https://twitter.com/alertaio" class="twitter-follow-button" data-show-count="false">Follow @alertaio</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
         </div>
