--- a/_layouts/carousel.html
+++ b/_layouts/carousel.html
@@ -123,7 +123,7 @@
           <p class="lead">Alerta accepts alerts from the standard sources like Syslog, SNMP, Nagios, Zabbix and Sensu. Any monitoring tool that can trigger a URL request can be integrated easily. Anything that can be scripted can also send alerts using the command-line tool. There is already a Python SDK and Ruby and Scala SDKs are in the pipeline. Cool.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="/images/console-004.png" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" src="/assets/images/console-004.png" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -131,7 +131,7 @@
 
       <div class="row featurette">
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="/images/console-003.png" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" src="/assets/images/console-003.png" alt="Generic placeholder image">
         </div>
         <div class="col-md-7">
           <h2 class="featurette-heading">Flexible alert format. <span class="text-muted">Capture what's important to you.</span></h2>
@@ -147,7 +147,7 @@
           <p class="lead">When receiving alerts from multiple sources you can quickly become overwhelmed. With Alerta any alert with the same environment and resource is considered a duplicate if it has the same severity. If it has a different severity it is correlated so that you only see the most recent one. Awesome.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="/images/console-002.png" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" src="/assets/images/console-002.png" alt="Generic placeholder image">
         </div>
       </div>
 
