--- a/_layouts/carousel.html
+++ b/_layouts/carousel.html
@@ -70,6 +70,7 @@
                     <li><a href="https://pypi.python.org/pypi/alerta-server">Python PyPI</a></li>
                     <li><a href="https://github.com/alerta/openshift-try-alerta">RedHat OpenShift</a></li>
                     <li><a href="https://github.com/alerta/vagrant-try-alerta">Vagrant</a></li>
+                    <li><a href="https://github.com/guardian/alerta/blob/master/alerta-server.spec">RPM Packages</a></li>
                   </ul>
                 </li>
                 <li><a href="http://github.com/guardian/alerta">GitHub</a></li>
@@ -101,7 +102,7 @@
         <div class="col-lg-4">
           <i class="fa fa-wrench fa-5x"></i>
           <h2>Alert API</h2>
-          <p>Alerts are submitted in JSON-format to an HTTP API. Alerts can be queried from the command-line or viewed in a slick web console optimized for desktop, tablet and mobile. User logins can be added using Google or GitHub OAuth2 and programatic access is managed using API keys.</p>
+          <p>Alerts are submitted in JSON-format to an HTTP API. Alerts can be queried from the command-line or viewed in a slick web console optimized for desktop, tablet and mobile. User logins can be added using Google, GitHub or Twitter OAuth and programatic access is managed using API keys.</p>
           <p><a class="btn btn-default" href="http://explorer.alerta.io" role="button">API Explorer &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
@@ -120,7 +121,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">All the alerts. <span class="text-muted">Not just the easy ones.</span></h2>
-          <p class="lead">Alerta accepts alerts from the standard sources like Syslog, SNMP, Nagios, Zabbix and Sensu. Any monitoring tool that can trigger a URL request can be integrated easily. Anything that can be scripted can also send alerts using the command-line tool. There is already a Python SDK and Ruby and Scala SDKs are in the pipeline. Cool.</p>
+          <p class="lead">Alerta accepts alerts from the standard sources like Syslog, SNMP, Nagios, Zabbix and Sensu. Any monitoring tool that can trigger a URL request can be integrated easily. Anything that can be scripted can also send alerts using the command-line tool. There is already a Python SDK and other SDKs are in the pipeline. Cool.</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive" src="/assets/images/console-004.png" alt="Generic placeholder image">
