minor update to Why Alerta?

--- a/_layouts/carousel.html
+++ b/_layouts/carousel.html
@@ -26,6 +26,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/css/carousel.css" rel="stylesheet">
+    <link href="/css/custom.css" rel="stylesheet">
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -96,7 +97,7 @@
           <!-- img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;" -->
           <i class="fa fa-dashboard fa-5x img-circle"></i>
           <h2>Why alerta?</h2>
-          <p>Email was not designed to be used as an alert console. It is not a scalable solution when it comes to monitoring and alert visualisation. A minimal installation can be deployed quickly and easily extended as monitoring requirements and confidence grow. There are integrations available with Riemann, Nagios, Zabbix, Kibana, Sensu and InfluxDB. Integrating bespoke systems is easy using the API or command-line tool.</p>
+          <p>Email was not designed to be used as an alert console. It is not a scalable solution when it comes to monitoring and alert visualisation. A minimal installation of Alerta can be deployed quickly and easily extended as monitoring requirements and confidence grow. There are integrations available with Riemann, Nagios, Zabbix, Kibana, Sensu, Kibana, Pingdom and Cloudwatch. Integrating bespoke systems is easy using the API or command-line tool.</p>
           <p><a class="btn btn-default" href="http://try.alerta.io" role="button">Try it now &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
