--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,6 +60,11 @@
                     <li><a href="https://github.com/alerta/riemann-alerta">Riemann</a></li>
                     <li><a href="https://github.com/alerta/sensu-alerta">Sensu</a></li>
                     <li><a href="https://github.com/alerta/kibana-alerta">Kibana</a></li>
+                    <li><a href="http://docs.alerta.io/en/latest/integrations.html#pagerduty">PagerDuty</a></li>
+                    <li><a href="http://docs.alerta.io/en/latest/integrations.html#cloudwatch">AWS Cloudwatch</a></li>
+                    <li><a href="http://docs.alerta.io/en/latest/integrations.html#pingdom">Pingdom</a></li>
+                    <li><a href="https://docs.influxdata.com/kapacitor/latest/nodes/alert_node/#alerta">InfluxDB Kapacitor</a></li>
+                    <li><a href="https://github.com/alerta/prometheus-config">Prometheus</a></li>
                     <li class="divider"></li>
                     <li class="dropdown-header">Deploy</li>
                     <li><a href="https://github.com/alerta/alerta-cfn">AWS Cloudformation</a></li>
@@ -99,7 +104,7 @@
         </div>
 
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2014 Nick Satterly &middot; <a href="http://ec.europa.eu/justice/data-protection/">Privacy</a> &middot; <a href="http://www.apache.org/licenses/LICENSE-2.0.html">License</a></p>
+        <p>&copy; 2014-2016 Nick Satterly &middot; <a href="http://ec.europa.eu/justice/data-protection/">Privacy</a> &middot; <a href="http://www.apache.org/licenses/LICENSE-2.0.html">License</a></p>
       </footer>
 
     </div><!-- /.container -->
