Add Google stackdriver

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,6 +65,7 @@
                     <li><a href="http://docs.alerta.io/en/latest/integrations.html#pingdom">Pingdom</a></li>
                     <li><a href="https://docs.influxdata.com/kapacitor/latest/nodes/alert_node/#alerta">InfluxDB Kapacitor</a></li>
                     <li><a href="https://github.com/alerta/prometheus-config">Prometheus</a></li>
+                    <li><a href="http://docs.alerta.io/en/latest/integrations.html#stackdriver">Google Stackdriver</a></li>
                     <li class="divider"></li>
                     <li class="dropdown-header">Deploy</li>
                     <li><a href="https://github.com/alerta/alerta-cfn">AWS Cloudformation</a></li>
