Minor updates and freshness checks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,30 +55,31 @@
                     <li><a href="https://github.com/alerta/alerta-chrome-extension">Chrome Extension</a></li>
                     <li class="divider"></li>
                     <li class="dropdown-header">Integrations</li>
-                    <li><a href="https://github.com/alerta/nagios3-alerta">Nagios</a></li>
+                    <li><a href="https://github.com/alerta/nagios-alerta">Nagios</a></li>
                     <li><a href="https://github.com/alerta/zabbix-alerta">Zabbix</a></li>
                     <li><a href="https://github.com/alerta/riemann-alerta">Riemann</a></li>
                     <li><a href="https://github.com/alerta/sensu-alerta">Sensu</a></li>
                     <li><a href="https://github.com/alerta/kibana-alerta">Kibana</a></li>
+                    <li><a href="https://github.com/alerta/prometheus-config">Prometheus</a></li>
+                    <li><a href="https://docs.influxdata.com/kapacitor/latest/nodes/alert_node/#alerta">InfluxDB Kapacitor</a></li>
+                    <li class="divider"></li>
+                    <li class="dropdown-header">Webhooks</li>
                     <li><a href="http://docs.alerta.io/en/latest/integrations.html#pagerduty">PagerDuty</a></li>
                     <li><a href="http://docs.alerta.io/en/latest/integrations.html#cloudwatch">AWS Cloudwatch</a></li>
                     <li><a href="http://docs.alerta.io/en/latest/integrations.html#pingdom">Pingdom</a></li>
-                    <li><a href="https://docs.influxdata.com/kapacitor/latest/nodes/alert_node/#alerta">InfluxDB Kapacitor</a></li>
-                    <li><a href="https://github.com/alerta/prometheus-config">Prometheus</a></li>
                     <li><a href="http://docs.alerta.io/en/latest/integrations.html#stackdriver">Google Stackdriver</a></li>
                     <li class="divider"></li>
                     <li class="dropdown-header">Deploy</li>
-                    <li><a href="https://github.com/alerta/alerta-cfn">AWS Cloudformation</a></li>
+                    <li><a href="https://github.com/alerta/alerta-cloudformation">AWS Cloudformation</a></li>
                     <li><a href="https://registry.hub.docker.com/u/alerta/alerta-web/">Docker</a></li>
                     <li><a href="https://github.com/alerta/packer-templates">Packer</a></li>
-                    <li><a href="https://github.com/guardian/alerta#deploy-to-the-cloud">Heroku</a></li>
+                    <li><a href="https://github.com/alerta/heroku-api-alerta">Heroku</a></li>
                     <li><a href="https://pypi.python.org/pypi/alerta-server">Python PyPI</a></li>
                     <li><a href="https://github.com/alerta/openshift-try-alerta">RedHat OpenShift</a></li>
                     <li><a href="https://github.com/alerta/vagrant-try-alerta">Vagrant</a></li>
                   </ul>
                 </li>
                 <li><a href="http://github.com/guardian/alerta">GitHub</a></li>
-                <li><a href="/about.html">About</a></li>
               </ul>
             </div>
           </div>
@@ -105,7 +106,7 @@
         </div>
 
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2014-2016 Nick Satterly &middot; <a href="http://ec.europa.eu/justice/data-protection/">Privacy</a> &middot; <a href="http://www.apache.org/licenses/LICENSE-2.0.html">License</a></p>
+        <p>&copy; 2014-2017 Nick Satterly &middot; <a href="http://ec.europa.eu/justice/data-protection/">Privacy</a> &middot; <a href="http://www.apache.org/licenses/LICENSE-2.0.html">License</a></p>
       </footer>
 
     </div><!-- /.container -->
